# embassy-stm32-template

./: .gitignore  Cargo.toml  Justfile  build.rs  cargo-generate.toml  clock_configs.rhai  post-script.rhai  pre-script.rhai  rust-toolchain.toml  {{crate_name}}.code-workspace  {{project-name}}.code-workspace
.cargo/: config.toml
clock_config/: stm32f4x5.txt  stm32g474.txt
src/: board.rs  lib.rs  log_macros.rs  main.rs
src/board/: mod.rs  set_pins_as_output.rs
src/usb/: messages.rs  mod.rs  tasks.rs
