[package]
edition = "2024"
name = "{{project-name}}"
version = "0.1.0"

[dependencies]
embassy-stm32 = { git = "https://github.com/shellixyz/embassy.git", branch = "template-start", features = ["defmt", "time-driver-any", "memory-x", "exti", "unstable-pac", "{{embassy_chip_feature}}"]  }
embassy-sync = { git = "https://github.com/shellixyz/embassy.git", branch = "template-start", features = ["defmt"] }
embassy-executor = { git = "https://github.com/shellixyz/embassy.git", branch = "template-start", features = ["arch-cortex-m", "executor-thread", "defmt", "integrated-timers", "nightly"] }
embassy-time = { git = "https://github.com/shellixyz/embassy.git", branch = "template-start", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-80_000_000"] }
embassy-time-queue-driver = { git = "https://github.com/shellixyz/embassy.git", branch = "template-start" }
embassy-usb = { git = "https://github.com/shellixyz/embassy.git", branch = "template-start" }
embassy-futures = "0.1.1"

defmt = "1.0.1"
defmt-rtt = "1.0.0"

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core", "critical-section"] }
cortex-m-rt = "0.7.0"
stm32-metapac = { version = "16.0.0", features = ["{{embassy_chip_feature}}"] }
panic-probe = "1.0.0"

getset = { git = "ssh://git@github.com/shellixyz/getset.git" }

switch-hal = "0.4.0"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
embedded-io-cursor = { git = "ssh://git@github.com/shellixyz/embedded-io-cursor.git" }

#heapless = "0.8.0"
strum_macros = "0.27.1"
thiserror-no-std = "2.0.2"
derive_more = { version = "2.0.1", default-features = false, features = ["full"] }
cfg-if = "1.0.0"
static_cell = "2.0.0"
micromath = "2.1.0"
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
postcard = "1.1.2"

[features]
default = ["defmt"]
defmt = [
    "embassy-stm32/defmt", "embassy-sync/defmt", "embassy-executor/defmt", "embassy-time/defmt", "panic-probe/print-defmt",
    "stm32-metapac/defmt", "embedded-io-async/defmt-03", "embedded-io-cursor/defmt", "embedded-hal/defmt-03",
    "embedded-hal-async/defmt-03", "postcard/defmt",
]
swd = []

[profile.release]
debug = 2
opt-level = 'z'
lto = true

[build-dependencies]
indoc = "2.0.6"
git-version = "0.3.9"
