[package]
edition = "2024"
name = "{{ crate_name }}"
version = "0.1.0"

[dependencies]
embassy-stm32 = { git = "https://github.com/shellixyz/embassy.git", branch = "template-start", features = ["time-driver-any", "memory-x", "exti", "unstable-pac", "{{ embassy_chip_feature }}"]  }
embassy-sync = { git = "https://github.com/shellixyz/embassy.git", branch = "template-start" }
embassy-executor = { git = "https://github.com/shellixyz/embassy.git", branch = "template-start", features = ["arch-cortex-m", "executor-thread", "integrated-timers", "nightly"] }
embassy-time = { git = "https://github.com/shellixyz/embassy.git", branch = "template-start", features = ["defmt-timestamp-uptime", "tick-hz-80_000_000"] }
embassy-time-queue-driver = { git = "https://github.com/shellixyz/embassy.git", branch = "template-start" }
{% if usb_support %}
embassy-usb = { git = "https://github.com/shellixyz/embassy.git", branch = "template-start", optional = true }
{% endif %}
embassy-futures = "0.1.1"

defmt = { version = "1.0.1", optional = true }
defmt-rtt = { version = "1.0.0", optional = true }
panic-probe = { version = "1.0.0", optional = true }
panic-halt = "1.0"

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core", "critical-section"] }
cortex-m-rt = "0.7.0"
stm32-metapac = { version = "16.0.0", features = ["{{embassy_chip_feature}}"] }

getset = { git = "ssh://git@github.com/shellixyz/getset.git" }

switch-hal = "0.4.0"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
embedded-io-cursor = { git = "ssh://git@github.com/shellixyz/embedded-io-cursor.git" }

#heapless = "0.8.0"
strum_macros = "0.27.1"
thiserror-no-std = "2.0.2"
derive_more = { version = "2.0.1", default-features = false, features = ["full"] }
cfg-if = "1.0.0"
static_cell = "2.0.0"
micromath = "2.1.0"
serde = { version = "1.0.219", default-features = false, features = ["derive"], optional = true }
postcard = { version = "1.1.2", optional = true }

[features]
{% if usb_support %}
default = ["swd", "no-reset-on-panic", "usb"]
{% else %}
default = ["swd", "no-reset-on-panic"]
{% endif %}
defmt = [
    "dep:defmt", "dep:defmt-rtt", "dep:panic-probe",
    "embassy-stm32/defmt", "embassy-sync/defmt", "embassy-executor/defmt", "embassy-time/defmt", "embassy-time/defmt-timestamp-uptime",
    "panic-probe/print-defmt", "stm32-metapac/defmt", "embedded-io-async/defmt-03", "embedded-io-cursor/defmt", "embedded-hal/defmt-03",
    "embedded-hal-async/defmt-03", "postcard/defmt",
]
swd = ["defmt"]
no-reset-on-panic = []
panic-debug = ["no-reset-on-panic"]
{% if usb_support %}
usb = ["dep:embassy-usb", "dep:serde", "dep:postcard"]
{% endif %}

[profile.release]
debug = 2
opt-level = 'z'
lto = true

[build-dependencies]
indoc = "2.0.6"
git-version = "0.3.9"
